# V-Sentinel

./: .dockerignore  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  v_sentinel.db-shm  v_sentinel.db-wal
backend/: config.py  main.py
core/: README.md  __init__.py  analysis_agent.py  base_processor.py  constants.py  email_client.py  example_processor.py  pyproject.toml  runner.py  truck_processor.py  truck_tracker.py  vengine_client.py
core/example/: __init__.py
core/proto/: __init__.py  action_service.proto  action_service_pb2.py  action_service_pb2_grpc.py  base.proto  base_pb2.py  base_pb2_grpc.py  classification_service.proto  classification_service_pb2.py  classification_service_pb2_grpc.py  detection_service.proto  detection_service_pb2.py  detection_service_pb2_grpc.py  email.proto  email_pb2.py  email_pb2_grpc.py  generate.sh  ocr_service.proto  ocr_service_pb2.py  ocr_service_pb2_grpc.py  upload_service.proto  upload_service_pb2.py  upload_service_pb2_grpc.py
core/truck/: __init__.py  agent.py  constants.py  plate.py  processor.py  tracker.py
docs/: docker-deployment.md  engineering-optimization-roadmap.md  migration-core-to-backend.md  processor-plugin-usage.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: build_docker.sh
tests/: conftest.py  test_agent.py  test_api_processor.py  test_api_sources.py  test_core.py  test_database.py  test_email_client.py  test_frontend_and_webrtc.py  test_mediamtx_auth.py  test_messages.py  test_processing.py  test_schemas.py  test_settings.py  (+3 more)
(+75 files in other folders)
