[project]
name = "v-sentinel-core"
version = "0.1.0"
description = "V-Sentinel Core — standalone package for independent Processor development with full V-Engine gRPC support"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "PyTurboJPEG>=1.7.0,<2.0.0",
    "av>=12.0.0",
    "loguru>=0.7.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
